--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -2,10 +2,10 @@
   max-width: 800px; /* Restrict maximum width */
   margin: 0 auto; /* Center the content horizontally */
   padding: 20px; /* Add padding for spacing */
-  text-align: center; /* Center-align the text */
-  background-color: #ffffff; /* White background */
+  text-align: left; /* Center-align the text */
+  /* background-color: #ffffff;  */
   border-radius: 8px; /* Rounded corners */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+  /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);  */
 }
 
 .about-page h1 {
